Fixed alignment issue with comments'

--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -55,5 +55,5 @@ a {
     padding-left: 1.3%;
     border-left: 2px solid #a5a09f;
     padding-bottom: 1%;
-    margin-left: 3px;
+    margin-left: 4px;
 }
